# orbita

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  README.md
src/: main.rs
src/database/: connection.rs  executor.rs  mod.rs  pool.rs
src/models/: connection.rs  mod.rs  query.rs
src/ui/: handlers.rs  mod.rs
ui/: const.slint  icons.slint  index.slint  theme.slint
ui/partials/: DatabaseBrowser.slint  MenuBar.slint  NewConnectionDialog.slint  QueryEditor.slint
ui/screens/: MenuBar.slint  NewConnectionDialog.slint
ui/widgets/: CButton.slint  CInput.slint  CSelect.slint  CenteredIcon.slint  CustomInput.slint  HResize.slint  NewConnectionDialog.slint  Shadow.slint
