[package]
name = "orbita"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slint = "1.12.0"
sqlx = {version = "0.8.6", features = ["runtime-async-std", "sqlite", "postgres", "mysql", "macros", "migrate"] }
tokio = { version = "1.45.1", features = ["full"] }

[build-dependencies]
slint-build = "1.12.0"

[profile.dist]
inherits = "release"
codegen-units = 1
lto = true